--- a/secondary.html
+++ b/secondary.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col-lg-12">
             <ol class="breadcrumb">
-                <a href="homepage.html">Knowledge Base</a>&nbsp;» Manage Your Account
+                <a href="index.html">Knowledge Base</a>&nbsp;» Manage Your Account
             </ol>
             <div class="container">
 <div class="row">
