--- a/homepage.html
+++ b/homepage.html
@@ -1,13 +1,4 @@
-<!-- <p>
-	Welcome to the PringleAPI Knowledge Base. Select the sections below to seek help.</p>
-<div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
-	<a class="nav-link" href="?pid=1581">Manage Your Account</a> <a class="nav-link" href="?pid=2458">eAgent - IVR &amp; Phone Orders</a> <a class="nav-link" href="?pid=1585">Digital Menu Management</a> <a class="nav-link" href="?pid=1586">Customer Engagement</a> <a class="nav-link" href="?pid=1587">Reports &amp; Analytics</a> <a class="nav-link" href="?pid=1588">Website Look &amp; Feel</a> <a class="nav-link" href="?pid=1589">Sales Orders Management</a> <a class="nav-link" href="?pid=1590">Online Ordering Settings</a> <a class="nav-link" href="?pid=1591">Food@Work &amp; Delivery2Community</a> <a class="nav-link" href="?pid=1592">Manage Hardware Assets</a> <a class="nav-link" href="?pid=1593">Miscellaneous</a></div>
-<p>
-	&nbsp;</p> -->
 
-
-
-  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -32,19 +23,17 @@
       <div class="container-inner-wrap">
           <div class="row justify-content-center">
               <div class="col-xl-6 col-lg-8">
-                  <div class="pringleapikb-section-title text-center">
+                  <div class="pringleapikb-section-title text-center mb-55">
                       <h2 class="title">How can we help you?
                       </h2>
-                      <p>Welcome to the PringleAPI Knowledge Base. Select the sections below to seek help.
-
-                      </p>
+                      <p>Search Here To Get Answers To Your Questions</p>
                   </div>
               </div>
           </div>
           <div class="row justify-content-center">
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="Manage-Account.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="fa fa-user"></i></div>
                       <div class="content">
                           <h5>Manage Your Account</h5>
@@ -54,7 +43,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="eAgent.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="fa fa-headphones"></i></div>
                       <div class="content">
                           <h5>eAgent - IVR & Phone Orders</h5>
@@ -64,7 +53,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="Digital-Menu.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="	fa fa-file-text"></i></div>
                       <div class="content">
                           <h5>Digital Menu Management</h5>
@@ -74,7 +63,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="Customer-Engagement.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="fa fa-handshake-o"></i></div>
                       <div class="content">
                           <h5>Customer Engagement</h5>
@@ -84,7 +73,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="Reports-And-Analytics.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="	fa fa-database"></i></div>
                       <div class="content">
                           <h5>Reports & Analytics</h5>
@@ -94,7 +83,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                   <div class="pringleapikb-services-item">
-                      <a href="Website.html" class="pringleapikb-services-link"></a>
+                      <a href="secondary.html" class="pringleapikb-services-link"></a>
                       <div class="icon"><i class="	fa fa-file-code-o"></i></div>
                       <div class="content">
                           <h5>Website Look & Feel</h5>
@@ -104,7 +93,7 @@
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
                 <div class="pringleapikb-services-item">
-                    <a href="Sales-Orders-Management.html" class="pringleapikb-services-link"></a>
+                    <a href="secondary.html" class="pringleapikb-services-link"></a>
                     <div class="icon"><i class="	fa fa-shopping-cart"></i></div>
                     <div class="content">
                         <h5>Sales Orders Management</h5>
@@ -114,7 +103,7 @@
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
               <div class="pringleapikb-services-item">
-                  <a href="Online-Ordering.html" class="pringleapikb-services-link"></a>
+                  <a href="secondary.html" class="pringleapikb-services-link"></a>
                   <div class="icon"><i class="	fa fa-shopping-basket"></i></div>
                   <div class="content">
                       <h5>Online Ordering Settings</h5>
@@ -124,8 +113,8 @@
           </div>
           <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
             <div class="pringleapikb-services-item">
-                <a href="Food@Work.html" class="pringleapikb-services-link"></a>
-                <div class="icon"><i class="fa fa-truck"></i></div>
+                <a href="secondary.html" class="pringleapikb-services-link"></a>
+                <div class="icon"><i class="	fa fa-truck"></i></div>
                 <div class="content">
                     <h5>Food@Work & Delivery2Community</h5>
                     <p>Knowledge base that organized collection system</p>
@@ -134,7 +123,7 @@
         </div>
         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
           <div class="pringleapikb-services-item">
-              <a href="Manage-Hardware-Assets.html" class="pringleapikb-services-link"></a>
+              <a href="secondary.html" class="pringleapikb-services-link"></a>
               <div class="icon"><i class="	fa fa-print"></i></div>
               <div class="content">
                   <h5>Manage Hardware Assets</h5>
@@ -144,7 +133,7 @@
       </div>
       <div class="col-xl-4 col-lg-4 col-md-6 col-sm-10">
         <div class="pringleapikb-services-item">
-            <a href="Miscellaneous.html" class="pringleapikb-services-link"></a>
+            <a href="secondary.html" class="pringleapikb-services-link"></a>
             <div class="icon"><i class="	fa fa-info-circle"></i></div>
             <div class="content">
                 <h5>Miscellaneous</h5>
